--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8">    
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
         <title>Formula Cars</title>
     </head>
     <body style="height:100%">
@@ -32,7 +36,7 @@
             <div class="description"> 
                     <h1>Formula Cars</h1>
                     <h5>
-                        Formula racing is any of several forms of open-wheeled single-seater motorsport road racing. The origin of the term lies in the nomenclature that was adopted by the FIA for all of its post-World War II single-seater regulations, or formulae. The best known of these formula are Formula One, Formula Two, Formula Three 
+                        Formula racing is any of several forms of open-wheeled single-seater motorsport road racing. The origin of the term lies in the nomenclature that was adopted by the FIA for all of its post-World War II single-seater regulations, or formula. The best known of these formula are Formula One, Formula Two, Formula Three 
                     </h5></br>
                         <h6>Here we have the main differences between these three categories:</h6>
                      <table class="main-table">       
