--- a/formula2.html
+++ b/formula2.html
@@ -11,7 +11,7 @@
         <title>Formula Cars - F1</title>
     </head>
     <body style="height:100%">
-        <header class="container-fluid text-center"></header>
+        <header class="container"></header>
         <nav class="nav principal"></nav>
             <ul class="nav-list">
                 <li class="nav-item">
@@ -34,7 +34,14 @@
             </div>
             <div class="description"> 
                     <h1>Formula 2</h1>
-                    <h5>Formula Two, abbreviated to F2, is a type of open wheel formula racing first codified in 1948. It was replaced in 1985 by Formula 3000, but revived by the FIA from 2009–2012 in the form of the FIA Formula Two Championship. The name returned in 2017 when the former GP2 Series became known as the FIA Formula 2 Championship.</h5>
+                    <h5>Formula Two, abbreviated to F2, is a type of open wheel formula racing first codified in 1948. 
+                        It was replaced in 1985 by Formula 3000, but revived by the FIA from 2009–2012 in the form of 
+                        the FIA Formula Two Championship. The name returned in 2017 when the former GP2 Series became 
+                        known as the FIA Formula 2 Championship.
+                    </h5>
+            </div>
+            <div class = "signature">
+                <h6> Carlos Sánchez Álvarez - 2020 </h6>
             </div>
         </main>
     </body>
