--- a/formula1.html
+++ b/formula1.html
@@ -11,7 +11,7 @@
         <title>Formula Cars - F1</title>
     </head>
     <body style="height:100%">
-        <header class="container-fluid text-center"></header>
+        <header class="container"></header>
         <nav class="nav principal"></nav>
             <ul class="nav-list">
                 <li class="nav-item">
@@ -34,7 +34,18 @@
             </div>
             <div class="description"> 
                     <h1>Formula 1</h1>
-                    <h5>Formula 1 is the highest class of single-seater auto racing sanctioned by the Fédération Internationale de l'Automobile (FIA) and owned by the Formula One Group. The World Drivers' Championship, which became the FIA Formula One World Championship in 1981, has been one of the premier forms of racing around the world since its inaugural season in 1950. The word "formula" in the name refers to the set of rules to which all participants' cars must conform.[1] A Formula One season consists of a series of races, known as Grands Prix (French for ''grand prizes' or 'great prizes''), which take place worldwide on purpose-built circuits and on public roads.</h5>
+                    <h5>Formula 1 is the highest class of single-seater auto racing sanctioned 
+                        by the Fédération Internationale de l'Automobile (FIA) and owned by the Formula 
+                        One Group. The World Drivers' Championship, which became the FIA Formula One 
+                        World Championship in 1981, has been one of the premier forms of racing around 
+                        the world since its inaugural season in 1950. The word "formula" in the name refers 
+                        to the set of rules to which all participants' cars must conform. A Formula One 
+                        season consists of a series of races, known as Grands Prix (French for ''grand prizes' 
+                        or 'great prizes''), which take place worldwide on purpose-built circuits and on public roads.
+                    </h5>
+            </div>
+            <div class = "signature">
+                <h6> Carlos Sánchez Álvarez - 2020 </h6>
             </div>
         </main>
     </body>
